<resources>
    <string name="app_name">Keaz</string>
    <string name="title_accounts" translatable="true">Comptes</string>
    <string name="title_operations" translatable="true">Opérations</string>
    <string name="title_cards_and_services" translatable="true">Cartes et services</string>
    <string name="title_settings" translatable="true">Paramètres</string>

    <!-- launch -->
    <string name="launch_welcome_message" translatable="true">Bienvenue sur KEAZ d’Orabank</string>
    <string name="launch_welcome_sub_message" translatable="true">Cliquez, maitrisez, profitez...</string>
    <string name="launch_login_button_message" translatable="true">S’identifier</string>
    <string name="launch_subscribe_button_message" translatable="true">Première utilisation ? S’enroler</string>
    <string name="launch_logo_description" translatable="true">Logo de Keaz</string>

    <!-- login -->
    <string name="login_title" translatable="true">Se connecter à son compte</string>
    <string name="login_sub_title" translatable="true">Entrer votre identifiant et mot de passe pour accéder à votre compte MyKeaz</string>
    <string name="login_identifier_hint" translatable="true">Identifiant</string>
    <string name="login_password_hint" translatable="true">Mot de passe</string>
    <string name="login_login_mesage" translatable="true">Se connecter</string>
    <string name="login_password_forgotten_mesage" translatable="true">Mot de passe oublié ?</string>

    <!-- subscribe -->
    <string name="subscribe_title" translatable="true">Inscrivrez vous à Keaz</string>
    <string name="subscribe_sub_title" translatable="true">Renseignez les differentes informations de votre compte Orabank pour acceder à votre banque en ligne.</string>
    <string name="subscribe_account_number_hint" translatable="true">Votre numéro de compte sans la clé RIB</string>
    <string name="subscribe_identifier_hint" translatable="true">Choisissez un identifiant</string>
    <string name="subscribe_password_hint" translatable="true">Définissez un mot de passe</string>
    <string name="subscribe_password_confirmation_hint" translatable="true">Confirmez votre mot de passe</string>
    <string name="subscribe_login_mesage" translatable="true">S\'inscrire</string>
</resources>
