<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_accounts">

    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.wolasoft.keaz.ui.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/navigation_operations"
        android:name="com.wolasoft.keaz.ui.operations.OperationsFragment"
        android:label="@string/title_operations"
        tools:layout="@layout/fragment_operations" />

    <fragment
        android:id="@+id/navigation_cards_and_services"
        android:name="com.wolasoft.keaz.ui.cardsandservices.CardsAndServicesFragment"
        android:label="@string/title_cards_and_services"
        tools:layout="@layout/fragment_cards_and_services" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.wolasoft.keaz.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
