<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch_background_image"
    tools:context=".ui.launch.LaunchFragment"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/logoIMG"
        android:layout_width="@dimen/launch_logo_width"
        android:layout_height="@dimen/launch_logo_height"
        android:src="@drawable/keaz_logo"
        android:contentDescription="@string/launch_logo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/launch_logo_margin_top"
        />

    <TextView
        android:id="@+id/welcomeMessageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/headline.white.bold"
        android:text="@string/launch_welcome_message"
        tools:text="Bienvenue sur KEAZ d’Orabank"
        app:layout_constraintTop_toBottomOf="@id/logoIMG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacer12"
        />

    <TextView
        android:id="@+id/welcomeSubMessageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subhead.white.medium"
        android:text="@string/launch_welcome_sub_message"
        tools:text="Cliquez, maitrisez, profitez..."
        app:layout_constraintTop_toBottomOf="@id/welcomeMessageTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacer4"
        />

    <Button
        android:id="@+id/loginBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_login_button_message"
        style="@style/button_primary"
        android:layout_marginStart="@dimen/spacer8"
        android:layout_marginEnd="@dimen/spacer8"
        android:layout_marginBottom="@dimen/launch_login_button_margin_bottom"
        app:layout_constraintBottom_toTopOf="@id/subscribeBT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/subscribeBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_subscribe_button_message"
        style="@style/button_primary"
        android:layout_marginStart="@dimen/spacer8"
        android:layout_marginEnd="@dimen/spacer8"
        android:layout_marginBottom="@dimen/spacer8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
