<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacer8"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/headline.green.bold"
            android:text="@string/subscribe_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/login_password_forgotten_margin_bottom"
            />

        <TextView
            android:id="@+id/subTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subhead.text.medium"
            android:text="@string/subscribe_sub_title"
            android:layout_marginTop="@dimen/spacer4"
            app:layout_constraintTop_toBottomOf="@id/titleTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/login_password_forgotten_margin_bottom"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accountNumberHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input_layout"
            android:layout_marginTop="@dimen/spacer17_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subTitleTV"
            app:layout_constraintBottom_toTopOf="@id/identifierHolder"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subhead.text.medium"
                android:hint="@string/subscribe_account_number_hint"
                android:padding="@dimen/spacer4"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/identifierHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input_layout"
            android:layout_marginTop="@dimen/spacer4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountNumberHolder"
            app:layout_constraintBottom_toTopOf="@id/passwordHolder"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subhead.text.medium"
                android:padding="@dimen/spacer4"
                android:hint="@string/subscribe_identifier_hint"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input_layout"
            android:layout_marginTop="@dimen/spacer4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/identifierHolder"
            app:layout_constraintBottom_toTopOf="@id/confirmPasswordHolder"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subhead.text.medium"
                android:hint="@string/subscribe_password_hint"
                android:padding="@dimen/spacer4"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input_layout"
            android:layout_marginTop="@dimen/spacer4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordHolder"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subhead.text.medium"
                android:hint="@string/subscribe_password_confirmation_hint"
                android:padding="@dimen/spacer4"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_primary"
            android:text="@string/subscribe_login_mesage"
            android:layout_marginTop="@dimen/spacer24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordHolder"
            android:layout_marginBottom="@dimen/spacer12"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
